# mirage

./: .gitignore  Cargo.toml  Dockerfile  README.md  SECURITY.md  SECURITY_ANALYSIS.md  mirage_feasibility_analysis.md  packager.linux.toml  packager.macos.toml  packager.windows.toml
.github/workflows/: ci-build.yml  ci.yml  release.yaml
apple/Mirage/: BridgingHeader.h  CrossPlatform.xcconfig  MirageApp-Info.plist  MirageApp.entitlements  MirageTunnel.entitlements  build.sh  project.yml
apple/Mirage/Mirage.xcodeproj/: project.pbxproj
apple/Mirage/Mirage.xcodeproj/project.xcworkspace/xcuserdata/mchzb.xcuserdatad/: UserInterfaceState.xcuserstate
apple/Mirage/Mirage.xcodeproj/xcshareddata/xcschemes/: Mirage.xcscheme
apple/Mirage/Sources/MirageApp/: Mirage.icns  MirageApp.swift
apple/Mirage/Sources/MirageApp/Assets.xcassets/AppIcon.appiconset/: AppIcon.icns  Contents.json
apple/Mirage/Sources/MirageApp/Managers/: MirageBridge.swift  VPNManager.swift
apple/Mirage/Sources/MirageApp/Models/: TunnelConfig.swift  TunnelStore.swift
apple/Mirage/Sources/MirageApp/Views/: ContentView.swift  MenuBarView.swift  TunnelDetailView.swift  TunnelListView.swift
apple/Mirage/Sources/MirageTunnel/: PacketTunnelProvider.swift
apple/Mirage/Sources/Shared/: Constants.swift
docs/: mirage_feasibility_analysis.md  verification_phase3.md
examples/: client.toml  server.toml
mirage/: Cargo.toml
mirage-client/: Cargo.toml
mirage-client/src/: auth.rs  users_file_auth.rs
mirage-client/src/client/: connection_pool.rs  mod.rs  relayer.rs
mirage-ffi/: Cargo.toml  build.rs  cbindgen.toml
mirage-ffi/include/: mirage_ffi.h
mirage-ffi/src/: interface.rs  lib.rs  runtime.rs  types.rs
mirage-gui/: Cargo.toml  build.rs
mirage-gui/resources/: client.toml  mirage-client-daemon.rc
mirage-gui/src/: ipc.rs  validation.rs
mirage-gui/src/gui/: app.rs  error.rs  handlers.rs  instance.rs  mod.rs  types.rs  ui_builders.rs
mirage-server/: Cargo.toml
mirage-server/src/: auth.rs  main.rs  users_file.rs
mirage-server/src/server/: address_pool.rs  connection.rs  dispatcher.rs  handler.rs  mod.rs  nat.rs  quic.rs  session.rs
mirage-tests/: Cargo.toml
mirage-tests/tests/: test_client_communication.rs  test_client_isolation.rs  test_end_to_end.rs  test_failed_auth.rs
mirage-tests/tests/common/: mod.rs
mirage-tests/tests/static/: client.toml  server.toml
mirage/src/: certificates.rs  config.rs  constants.rs  error.rs  lib.rs  users_file.rs
mirage/src/auth/: client_auth.rs  mod.rs  server_auth.rs  stream.rs  users_file.rs
mirage/src/client/: connection.rs  connection_pool.rs  mod.rs  relayer.rs  rotation.rs
mirage/src/config/: client.rs  connection.rs  defaults.rs  mod.rs  network.rs  server.rs  transport.rs
mirage/src/crypto/: impersonate.rs  mod.rs  no_verify.rs
mirage/src/error/: auth.rs  certificate.rs  config.rs  interface.rs  mod.rs  network.rs  quic.rs
mirage/src/network/: mod.rs  socket.rs  socket_protect.rs  tls_detect.rs
mirage/src/network/dns/: linux.rs  mod.rs  windows.rs
mirage/src/network/interface/: mod.rs  tun_rs.rs
mirage/src/network/route/: mod.rs  netlink_socket.rs  posix.rs  route_socket.rs  windows.rs
mirage/src/protocol/: mod.rs
mirage/src/protocol/camouflage/: mod.rs
mirage/src/protocol/quic/: mod.rs
mirage/src/protocol/reality/: mod.rs
mirage/src/protocol/tcp/: mod.rs
mirage/src/protocol/tcp_tls/: mod.rs
mirage/src/protocol/udp/: mod.rs
mirage/src/server/: address_pool.rs  connection.rs  dispatcher.rs  handler.rs  hooks.rs  mod.rs  nat.rs  quic.rs  session.rs
mirage/src/server/sni_router/: mod.rs  quic_sni.rs  tcp.rs  udp.rs
mirage/src/transport/: crypto.rs  framed.rs  jitter.rs  mod.rs  mux.rs  quic.rs  tcp.rs  udp.rs
mirage/src/utils/: command.rs  tracing.rs
resources/scripts/: build-apple.sh  package_unix.sh  package_windows.ps1
scripts/: build-apple.sh
