[workspace]
members = ["mirage", "mirage-client", "mirage-server", "mirage-gui", "mirage-tests"]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["mciart"]
license = "AGPL-3.0-or-later"
readme = "README.md"
edition = "2021"
rust-version = "1.80"
homepage = "https://github.com/mciart/mirage"
repository = "https://github.com/mciart/mirage"
keywords = ["vpn", "reality", "tls", "tunnel", "networking", "tokio"]
categories = ["command-line-utilities", "network-programming"]

[workspace.dependencies]
# Internal crates
mirage = { path = "mirage", version = "0.1.0" }
mirage-client = { path = "mirage-client", version = "0.1.0" }
mirage-server = { path = "mirage-server", version = "0.1.0" }

# BoringSSL TLS (Chrome fingerprint)
boring = "4"
tokio-boring = "4"

# Interfaces and networking
tun-rs = { version = "=2.7.3", features = ["async_tokio"] } # pinned audited version
socket2 = { version = "^0.6.0", features = ["all"] }
bytes = "^1.4"
ipnet = { version = "^2.7", features = ["serde"] }

# Tokio
tokio = { version = "^1.44.2", features = [
    "rt-multi-thread",
    "macros",
    "sync",
    "io-util",
    "net",
    "signal",
] }
dashmap = "^6"
futures = "^0.3.17"
async-trait = "^0.1.77"

# Configuration
figment = { version = "^0.10.8", features = ["toml", "env"] }
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"

# Cryptography (for Reality x25519)
x25519-dalek = "2"
rand = "0.8"

# Authentication
argon2 = "^0.5.0"
rpassword = "^7.2"
rand_core = { version = "^0.6.4", features = ["getrandom"] }

# Tracing/Logging
tracing = { version = "^0.1.37", features = ["release_max_level_info"] }
tracing-subscriber = { version = "^0.3.20", features = ["env-filter", "ansi"] }
nu-ansi-term = "^0.50.0"

# Privilege escalation
privesc = "^1.2.0"

# Utils
thiserror = "^2.0"
clap = { version = "^4.1", features = ["derive"] }
regex = "^1.11"

# GUI
iced = { version = "^0.14.0", features = [
    "tokio",
    "advanced",
    "highlighter",
] }

# Alloc
jemallocator = { version = "0.5" }

# WinTun
wintun-bindings = { version = "0.7.31", features = ["verify_binary_signature"] }

[profile.release]
strip = true
lto = "fat"
codegen-units = 1
panic = "abort"
