[package]
name = "mirage-ffi"
description = "C FFI library for Mirage VPN — enables Apple (macOS/iOS) native integration"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]
name = "mirage_ffi"
crate-type = ["staticlib", "cdylib"]

[dependencies]
mirage = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
ipnet = { workspace = true }
serde_json = { workspace = true }
figment = { workspace = true }
bytes = { workspace = true }

[build-dependencies]
cbindgen = "0.27"
