[package]
name = "mirage"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime
tokio = { version = "1.32", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec", "net"] }
futures = "0.3"

# Networking
bytes = "1.5"
thiserror = "1.0"
anyhow = "1.0"
socket2 = "0.5"
ipnet = "2.9"
dns-parser = "0.8"
hickory-resolver = { version = "0.24", features = ["tokio-runtime"] }

# TLS & Crypto
rustls = { version = "0.21", features = ["dangerous_configuration"] }
tokio-rustls = "0.24"
x509-parser = "0.15"
rcgen = "0.11"
ring = "0.17"
sha2 = "0.10"
hmac = "0.12"
chacha20poly1305 = "0.10"
rand = "0.8"
base64 = "0.21"
webpki = "0.22"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-appender = "0.2"

# Configuration
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
toml = "0.8"
config = "0.13"
dirs = "5.0"

# Utils
parking_lot = "0.12"
ctrlc = "3.4"
socket2-ext = "0.1" 

# Allocator (Optional)
jemallocator = { version = "0.5", optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
tun = { version = "0.6", features = ["async"] }

[target.'cfg(target_os = "macos")'.dependencies]
tun = { version = "0.6", features = ["async"] }

[target.'cfg(target_os = "windows")'.dependencies]
# [关键修复] Windows API 保持 0.52
windows = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_NetworkManagement_IpHelper",
    "Win32_NetworkManagement_Ndis",
    "Win32_Networking_WinSock",
] }
# [关键修复] 改为继承 workspace，解决版本冲突
wintun-bindings = { workspace = true }

# [关键修复] 补全所有缺失的 features
[features]
default = []
jemalloc = ["dep:jemallocator"]
offload = [] 
debug = []