[package]
name = "mirage"
description = "Reality-based VPN with XTLS-Vision"
readme = "../README.md"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
name = "mirage"
path = "src/lib.rs"

[[bin]]
name = "mirage"
path = "src/bin/main.rs"

[features]
default = []
offload = []
jemalloc = ["jemallocator"]
debug = []

[dependencies]
# BoringSSL TLS (Chrome fingerprint)
boring = { workspace = true }
tokio-boring = { workspace = true }

# QUIC support
quinn = { workspace = true, features = ["runtime-tokio", "rustls-ring"] }
rustls = { workspace = true, features = ["ring", "std"] }
rustls-native-certs = { workspace = true }
rustls-pemfile = { workspace = true }

# Interfaces and networking
tun-rs = { workspace = true }
socket2 = { workspace = true }
libc = { workspace = true }
bytes = { workspace = true }
ipnet = { workspace = true }

# Tokio
tokio = { workspace = true }
dashmap = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }

# Configuration
figment = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }

# Cryptography (for Reality x25519)
x25519-dalek = { workspace = true }
rand = { workspace = true }

# Authentication (for mirage users)
argon2 = { workspace = true }
rpassword = { workspace = true }
rand_core = { workspace = true }
hex = { workspace = true }

# Security hardening
zeroize = { workspace = true }
subtle = { workspace = true }

# Inner encryption (application-layer)
chacha20poly1305 = "0.10"
hkdf = "0.12"
sha2 = "0.10"

# Tracing/Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
nu-ansi-term = { workspace = true }

# Utils
thiserror = { workspace = true }

# Alloc
[target.'cfg(unix)'.dependencies]
jemallocator = { workspace = true, optional = true }

# WinTun & Windows Native
[target.'cfg(windows)'.dependencies]
wintun-bindings = { workspace = true }
windows = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_NetworkManagement_IpHelper",
    "Win32_NetworkManagement_Ndis",
    "Win32_NetworkManagement_WindowsFilteringPlatform",
    "Win32_Networking_WinSock",
    "Win32_Security",
] }

[dev-dependencies]
tempfile = "3"